# TritonForge

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  TASK.md  input.css  package-lock.json  package.json  tailwind.config.js
assets/: tailwind.css
migrations/: 0001_create_conversion_jobs.sql  0002_add_trt_options.sql  0003_add_model_version.sql  0004_create_conversion_job_logs.sql  0005_create_model_groups.sql  0006_add_warmup_inputs.sql  0007_create_tritonserver_containers.sql  0008_drop_warmup_inputs.sql
src/: api.rs  app.rs  lib.rs  main.rs  onnx.rs
src/components/: gpu_selector.rs  group_card.rs  image_selector.rs  job_card.rs  mod.rs  navbar.rs  progress_bar.rs  template_selector.rs  upload_form.rs
src/errors/: app_error.rs  mod.rs
src/models/: config.rs  group.rs  job.rs  mod.rs  serving.rs  template.rs
src/routes/: about.rs  groups.rs  home.rs  job_detail.rs  jobs.rs  mod.rs  timer.rs
src/server/: conversion.rs  db.rs  docker.rs  gpu.rs  mod.rs  onnx_config.rs  serving.rs  storage.rs
templates/: classification.pbtxt  config.pbtxt  detection.pbtxt  segmentation.pbtxt
tests/integration/: docker_test.rs
tests/unit/: progress_test.rs  validation_test.rs
