[package]
name = "tensorrt-converter"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server"]

[dependencies]
dioxus = { version = "0.7", features = ["fullstack", "router"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde", "js"] }
thiserror = "2"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures-timer = "3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
bollard = "0.20"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
toml = "0.8"
tempfile = "3"
tokio-stream = "0.1"
dotenvy = "0.15"

[[test]]
name = "validation_test"
path = "tests/unit/validation_test.rs"

[[test]]
name = "progress_test"
path = "tests/unit/progress_test.rs"

[[test]]
name = "docker_test"
path = "tests/integration/docker_test.rs"

[dev-dependencies]
pretty_assertions = "1"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = "s"
strip = true
